------------------------------------------------------------------------
r2061 | gaser | 2022-08-01 00:46:30

Changed paths:
 M CHANGES.txt
 M cat_conf_factorial.m
 M cat_stat_homogeneity.m
A  html/icons/file_cat_reportlong.png


Changed: Added handling of flexible factorial designs using 3 different 
         definitions.
Changed: Added option for long. reports to cat_stat_homogeneity.m.
Fixed:   Corrected many smaller inconsistencies in cat_stat_homogeneity.m.
Added:   New icon for cat_stat_homogeneity.m.
------------------------------------------------------------------------
r2060 | gaser | 2022-07-31 01:52:32

Changed paths:
 M CHANGES.txt
 M cat_conf_tools.m
 M cat_long_report.m
 M cat_main_reportfig.m
 M cat_stat_check_SPM.m
 M cat_stat_homogeneity.m


Fixed:  Corrected incorrect entry for data_vol in cat_conf_tools.m.
Fixed:  Changed parameters in cat_main_reportfig according to new homogeneity
        function.
Fixed:  Corrected wrong indication og group factor in cat_stat_check_SPM.m
        for long. designs.
Fixed:  Solved some smaller issues in cat_stat_homogeneity.m.
 ------------------------------------------------------------------------
r2059 | gaser | 2022-07-29 23:01:03

Changed paths:
 M CHANGES.txt
 M Contents_info.txt
 M cat12.m
 M cat_conf_tools.m
 M cat_long_report.m
 M cat_stat_check_SPM.m
RM cat_stat_check_cov.m -> cat_stat_homogeneity.m
 D check_pipeline/IXI002-Guys-0828-T1.nii
 M check_pipeline/batch_surface_pipeline.m
 M check_pipeline/batch_volume_pipeline.m
 D check_pipeline/surf/lh.pbt.IXI002-Guys-0828-T1
 D check_pipeline/surf/lh.pbt.IXI016-Guys-0697-T1
 D check_pipeline/surf/lh.pbt.IXI017-Guys-0698-T1
 D check_pipeline/surf/lh.pbt.IXI019-Guys-0702-T1
 D check_pipeline/surf/rh.pbt.IXI002-Guys-0828-T1
 D check_pipeline/surf/rh.pbt.IXI016-Guys-0697-T1
 D check_pipeline/surf/rh.pbt.IXI017-Guys-0698-T1
 D check_pipeline/surf/rh.pbt.IXI019-Guys-0702-T1
 M check_pipeline_homogeneity.m

